# my-issue2md-project

./: .coverage  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  constitution.md  settings.json
docs/: code-review-report.md
issue2md/: __init__.py  __main__.py  cli.py  constants.py  converter.py  errors.py  github.py  parser.py
issue2md/cli/: __init__.py  main.py
issue2md/core/: __init__.py  converter.py  github.py  parser.py
issue2md/errors/: __init__.py  exceptions.py  messages.py
issue2md/models/: __init__.py  discussion.py  issue.py  resource.py
specs/: spec.md
specs/001-core-functionality/: api-sketch.md  plan.md  tasks.md
tests/: conftest.py
tests/integration/: test_acceptance.py  test_acceptance.py.bak  test_cli.py  test_github_discussion.py  test_github_discussion.py.bak  test_github_issue.py  test_github_issue.py.bak  test_github_pull.py  test_github_pull.py.bak  test_simple_httpserver.py
tests/unit/: test_discussion.py  test_errors.py  test_github.py  test_issue.py  test_parser.py  test_resource.py
